--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tanner Heitz</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/7086f308a1.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <section id="landing-page">
@@ -15,28 +18,103 @@
         </figure>
         <ul class="nav__link--list">
           <li class="nav__link">
-            <a href="#" class="nav__link--anchor
-            link__hover-effect
-            link__hover-effect--black">About</a>
+            <a
+              href="#"
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >About</a
+            >
           </li>
           <li class="nav__link">
-            <a href="#" class="nav__link--anchor
-            link__hover-effect
-            link__hover-effect--black">Projects</a>
+            <a
+              href="#"
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >Projects</a
+            >
           </li>
           <li class="nav__link">
-            <a href="#" class="nav__link--anchor
-            link__hover-effect
-            link__hover-effect--black">Contact</a>
+            <a
+              href="#"
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >Contact</a
+            >
           </li>
-          <li class="nav__link">
-            <a href="#" class="nav__link--anchor
-            link__hover-effect
-            link__hover-effect--black">
-            <i class="fa-solid fa-circle-half-stroke"></i></a>
+          <li class="nav__link click">
+            <a
+              href="#"
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+            >
+              <i class="fa-solid fa-circle-half-stroke"></i
+            ></a>
           </li>
         </ul>
       </nav>
+      <header class="header">
+        <div class="header__content">
+          <h1 class="title">Hey there,</h1>
+          <h1 class="title title--secondary">I'm Tanner</h1>
+          <p class="header__para">
+            I'm a <b class="red">Frontend Software Engineer</b> with a strong
+            passion for building web applications wth great user experiences.
+            <br />
+            Heres a bit more <b class="red">about me.</b>
+          </p>
+          <div class="social__list">
+            <a href="#" target="_blank" class="social__link click">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="#" target="_blank" class="social__link click">
+              <i class="fas fa-file-pdf"></i>
+            </a>
+            <a href="#" target="_blank" class="social__link click">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
+        </div>
+      </header>
+      <button class="mail__btn click">
+        <i class="fas fa-envelope"></i>
+      </button>
+      <a href="#projects" class="scroll">
+        <div class="scroll__icon click"></div>
+      </a>
+    </section>
+    <section id="projects">
+      <div class="container">
+        <div class="row">
+          <h1 class="section__title">
+            Here are some of my <span class="red">Projects</span>
+          </h1>
+          <ul class="project__list">
+            <li class="'Project">
+              <div class="project__wrapper">
+                <img src="./assets/blinker mockup.png" class="project__img" />
+                <div class="project__wrapper--bg"></div>
+                <div class="project__description">
+                  <h3 class="project__description--title">
+                    Car Sales Projects
+                  </h3>
+                  <h4 class="project__description--sub-title">
+                    HTML, CSS, JavaScript
+                  </h4>
+                  <p class="project__descrtiption--para">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Rerum temporibus asperiores possimus unde nulla cupiditate
+                    dolor aliquam earum ipsum quisquam.
+                  </p>
+                  <div class="project__description--links">
+                    <a href="#" class="project__description--link">
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a href="#" class="project__description--link">
+                      <i class="fas fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
     </section>
   </body>
 </html>
