--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section id="landing-page">
       <nav>
         <figure>
-          <img id="personal-logo" src="./assets/logo.svg" alt="" />
+          <img id="personal-logo" src="./assets/thFESlogo.png" alt="" />
         </figure>
         <ul class="nav__link--list">
           <li class="nav__link">
