--- a/index.html
+++ b/index.html
@@ -113,8 +113,114 @@
               </div>
             </li>
           </ul>
+          <ul class="project__list">
+            <li class="'Project">
+              <div class="project__wrapper">
+                <img src="./assets/blinker mockup.png" class="project__img" />
+                <div class="project__wrapper--bg"></div>
+                <div class="project__description">
+                  <h3 class="project__description--title">
+                    Car Sales Projects
+                  </h3>
+                  <h4 class="project__description--sub-title">
+                    HTML, CSS, JavaScript
+                  </h4>
+                  <p class="project__descrtiption--para">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Rerum temporibus asperiores possimus unde nulla cupiditate
+                    dolor aliquam earum ipsum quisquam.
+                  </p>
+                  <div class="project__description--links">
+                    <a href="#" class="project__description--link">
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a href="#" class="project__description--link">
+                      <i class="fas fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+          <ul class="project__list">
+            <li class="'Project">
+              <div class="project__wrapper">
+                <img src="./assets/blinker mockup.png" class="project__img" />
+                <div class="project__wrapper--bg"></div>
+                <div class="project__description">
+                  <h3 class="project__description--title">
+                    Car Sales Projects
+                  </h3>
+                  <h4 class="project__description--sub-title">
+                    HTML, CSS, JavaScript
+                  </h4>
+                  <p class="project__descrtiption--para">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Rerum temporibus asperiores possimus unde nulla cupiditate
+                    dolor aliquam earum ipsum quisquam.
+                  </p>
+                  <div class="project__description--links">
+                    <a href="#" class="project__description--link">
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a href="#" class="project__description--link">
+                      <i class="fas fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
     </section>
+    <footer>
+      <div class="container">
+        <div class="row footer__row">
+
+       
+        <figure>
+          <img id="personal__logo--footer" src="assets/THfelogo.png" />
+        </figure>
+        <div class="footer___social--list">
+          <a href="#"class="
+            footer__social--link 
+            liver__hover-effect 
+            liver__hover-effect--white
+          ">
+          Github
+
+          </a>
+          <a href="#"class="
+            footer__social--link 
+            liver__hover-effect 
+            liver__hover-effect--white
+          ">
+         linkedIn
+
+          </a>
+          <a href="#"class="
+            footer__social--link 
+            liver__hover-effect 
+            liver__hover-effect--white
+          ">
+          Contact
+
+          </a>
+          <a href="#"class="
+            footer__social--link 
+            liver__hover-effect 
+            liver__hover-effect--white
+          ">
+          Resume
+
+          </a>
+        </div>
+        <div class="footer__copyright">
+          Copyright  © 2025 Tanner Heitz 
+        </div>
+         </div>
+      </div>
+    </footer>
   </body>
 </html>
