--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     </section>
     <footer>
       <div class="container">
-        <div class="row">
+        <div class="row footer__row">
 
        
         <figure>
