--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
       <a href="#projects" class="scroll">
         <div class="scroll__icon click"></div>
       </a>
+      <div class="modal">
+        <div class="modal__half modal__about">Here's a bit about me.</div>
+        <div class="modal__half modal__contact">Lets have a chat!</div>
+      </div>
     </section>
     <section id="projects">
       <div class="container">
@@ -167,8 +171,8 @@
               </div>
             </li>
           </ul>
-         
-       
+          </div>
+          </div>
     </section>
     <footer>
       <div class="container">
@@ -181,32 +185,32 @@
         <div class="footer___social--list">
           <a href="#"class="
             footer__social--link 
-            liver__hover-effect 
-            liver__hover-effect--white
+            link__hover-effect 
+            link__hover-effect--white
           ">
           Github
 
           </a>
           <a href="#"class="
             footer__social--link 
-            liver__hover-effect 
-            liver__hover-effect--white
+            link__hover-effect 
+            link__hover-effect--white
           ">
          linkedIn
 
           </a>
           <a href="#"class="
             footer__social--link 
-            liver__hover-effect 
-            liver__hover-effect--white
+            link__hover-effect 
+            link__hover-effect--white
           ">
           Contact
 
           </a>
           <a href="#"class="
             footer__social--link 
-            liver__hover-effect 
-            liver__hover-effect--white
+            link__hover-effect 
+            link__hover-effect--white
           ">
           Resume
 
